<resources>
    <string name="app_name">USTH Weather</string>
    <string name="current_weather">Rainy</string>
    <string name="current_location">Thanh Hoa</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Rainy">Rainy</string>
    <string name="Sunny">Sunny</string>
</resources>
